--- a/FASTPAY_BASE/gradle.properties
+++ b/FASTPAY_BASE/gradle.properties
@@ -9,9 +9,9 @@
 # BUILD PERFORMANCE OPTIMIZATIONS
 # ============================================================================
 
-# JVM arguments for Gradle daemon - Optimized for faster builds
-# add-opens for kapt/javac on JDK 17+ (avoids "env is null" in TypeEnter.doCompleteEnvs)
-org.gradle.jvmargs=-Xmx6144m -Dfile.encoding=UTF-8 -XX:MaxMetaspaceSize=1024m -XX:+HeapDumpOnOutOfMemoryError -XX:+UseG1GC -Dkotlin.daemon.jvm.options=-Xmx2048m --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+# JVM arguments for Gradle daemon - Balance speed vs stability (avoid OOM / "env is null")
+# If build fails with OutOfMemoryError, lower -Xmx to 4096m and -Xmx2048m for Kotlin
+org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8 -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -XX:+UseG1GC -Dkotlin.daemon.jvm.options=-Xmx1536m --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 
 # Enable parallel builds - speeds up multi-module projects
 org.gradle.parallel=true
@@ -19,8 +19,9 @@ org.gradle.parallel=true
 # Enable build cache - reuses build outputs across builds (30-50% faster)
 org.gradle.caching=true
 
-# Enable configuration cache (incubating) - caches build configuration (20-40% faster)
-org.gradle.configuration-cache=true
+# Disable configuration cache - often causes long build then random failure / "kalp" or Kotlin errors
+# Re-enable with =true only after Gradle/AGP recommend it for your version
+org.gradle.configuration-cache=false
 
 # Enable file system watching - faster incremental builds
 org.gradle.vfs.watch=true
